<resources>
    <string name="app_name">ComidaEnCasa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lista">Lista General</string>
    <string name="menu_plato_dia">Plato del Día</string>
    <string name="menu_insumos">Stock de Insumos</string>
    <string name="menu_categoria">Categoría Semanal</string>
    <string name="menu_platos">Mis Platos</string>
    <string name="menu_votacion">Realizar Votación</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_reporte">Reporte</string>
    <string name="menu_perfil">Administrar Perfil</string>
    <string name="menu_cuenta">Administrar Cuenta</string>
    <string name="menu_cerrar_sesion">Cerrar Sesión</string>


</resources>