<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lista"
            android:icon="@drawable/ic_menu_lista_general"
            android:title="@string/menu_lista" />
        <item
            android:id="@+id/nav_platoDia"
            android:icon="@drawable/ic_menu_plato_del_dia"
            android:title="@string/menu_plato_dia" />

        <item
            android:id="@+id/nav_insumos"
            android:icon="@drawable/ic_menu_stock_insumos"
            android:title="@string/menu_insumos" />

        <item
            android:id="@+id/nav_categoria"
            android:icon="@drawable/ic_menu_categoria_semanal"
            android:title="@string/menu_categoria" />
        <item
            android:id="@+id/nav_platos"
            android:icon="@drawable/ic_menu_mis_platos"
            android:title="@string/menu_platos" />

        <item
            android:id="@+id/nav_votacion"
            android:icon="@drawable/ic_menu_realizar_votacion"
            android:title="@string/menu_votacion" />

        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/ic_menu_calendario"
            android:title="@string/menu_calendario" />

        <item
            android:id="@+id/nav_reporte"
            android:icon="@drawable/ic_menu_reporte"
            android:title="@string/menu_reporte" />

        <item
            android:id="@+id/nav_perfilAddUpdate"
            android:icon="@drawable/ic_menu_administrar_perfil"
            android:title="@string/menu_perfil" />

        <item
            android:id="@+id/nav_cuentaAddUpdate"
            android:icon="@drawable/ic_menu_administrar_cuenta"
            android:title="@string/menu_cuenta" />

        <item
            android:id="@+id/nav_cerrarSesion"
            android:icon="@drawable/ic_menu_cerrar_sesion"
            android:title="@string/menu_cerrar" />

    </group>
</menu>