<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_platos">

    <fragment
        android:id="@+id/nav_platos"
        android:name="com.utp.comidaencasav1.ui.platos.PlatosFragment"
        android:label="@string/menu_platos"
        tools:layout="@layout/fragment_platos">
    </fragment>

    <fragment
        android:id="@+id/nav_platosAddUpdateFragment"
        android:name="com.utp.comidaencasav1.ui.platos.PlatosAddUpdateFragment"
        android:label="@string/menu_platos"
        tools:layout="@layout/fragment_platos_add_update">
        <argument
            android:name="arg_item"
            app:argType="com.utp.comidaencasav1.model.models.Plato"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/nav_lista"
        android:name="com.utp.comidaencasav1.ui.lista.ListaFragment"
        android:label="@string/menu_lista"
        tools:layout="@layout/fragment_lista" />

    <fragment
        android:id="@+id/nav_insumos"
        android:name="com.utp.comidaencasav1.ui.insumos.InsumosFragment"
        android:label="@string/menu_insumos"
        tools:layout="@layout/fragment_insumos" />

    <fragment
        android:id="@+id/nav_cuentaAddUpdate"
        android:name="com.utp.comidaencasav1.ui.cuenta.CuentaAddUpdateFragment"
        android:label="@string/menu_cuenta"
        tools:layout="@layout/fragment_cuenta_add_update" />

    <fragment
        android:id="@+id/nav_perfilAddUpdate"
        android:name="com.utp.comidaencasav1.ui.perfil.PerfilAddUpdateFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil_add_update" />
    <fragment
        android:id="@+id/nav_categoria"
        android:name="com.utp.comidaencasav1.ui.categoria.CategoriaFragment"
        android:label="@string/menu_categoria"
        tools:layout="@layout/fragment_categoria" />
    <fragment
        android:id="@+id/nav_votacion"
        android:name="com.utp.comidaencasav1.ui.votacion.VotacionFragment"
        android:label="@string/menu_votacion"
        tools:layout="@layout/fragment_votacion" />

</navigation>